# ClothingStore

./: .dockerignore  Dockerfile  config.example.yml  docker-compose.yml  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 79b757f37fcc_append_is_active_column_for_product_.py  b56b159b0096_models_init.py  d469b0a33dcb_update_simplification_of_restrictions_.py  ed2344299d90_fix_is_active_column_on_product_model.py
app/: main.py
src/: main.py
src/app/entrypoints/: dependencies.py  routers.py  routes.py
src/app/interfaces/: units_of_work.py
src/app/services/: units_of_work.py  user_service.py
src/core/database/: connection.py
src/core/database/interfaces/: units_of_work.py
src/core/interfaces/: models.py  units_of_work.py
src/core/security/: config.py  models.py
src/domains/carts/adapters/: models.py  repositories.py
src/domains/carts/domain/: models.py
src/domains/carts/entrypoints/: dependencies.py
src/domains/carts/interfaces/: repositories.py  units_of_work.py
src/domains/carts/services/: service.py  units_of_work.py
src/domains/categories/adapters/: models.py  repositories.py
src/domains/categories/domain/: models.py
src/domains/categories/entrypoints/: dependencies.py  routes.py
src/domains/categories/interfaces/: repositories.py  units_of_work.py
src/domains/categories/services/: service.py  units_of_work.py
src/domains/collections/adapters/: models.py  repositories.py
src/domains/collections/domain/: models.py
src/infrastrucure/auth/: service.py
src/settings/: schemes.py  settings.py
(+35 files in other folders)
