[project]
name = "fastapi-clothing-store"
version = "0.1.0"
description = ""
authors = [
    {name = "XaBa YaBa",email = "achapovskimaxim@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "bcrypt (==4.0.1)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sentry-sdk[fastapi] (>=2.29.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
